--- a/dvc.yaml
+++ b/dvc.yaml
@@ -11,3 +11,11 @@ stages:
       - train.ipynb
     outs:
       - train.py
+  train:
+    cmd: pdm run python train.py
+    deps:
+      - train.py
+      - dataset/cifar-10-batches-py
+    params:
+      - seed
+      - epochs
