--- a/.gitignore
+++ b/.gitignore
@@ -95,6 +95,7 @@ ipython_config.py
 #Pipfile.lock
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
+.pdm.toml
 __pypackages__/
 
 # Celery stuff
@@ -136,5 +137,7 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# Project
 train.py
 pep582.sh
