Added code to make unique directories for each experiment

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -11,11 +11,28 @@ stages:
       - train.ipynb
     outs:
       - train.py
-  train:
-    cmd: pdm run python train.py
+  generate-hash:
+    cmd: pdm run python hash_params.py
     deps:
-      - train.py
-      - dataset/cifar-10-batches-py
+      - hash_params.py
+    outs:
+      - params.yaml.sha
     params:
       - seed
       - epochs
+  train:
+    cmd: pdm run python train.py
+    vars:
+      - params.yaml.sha
+    deps:
+      - train.py
+      - params.yaml.sha
+      - dataset/cifar-10-batches-py
+    outs:
+      - experiment/${hash}/
+    params:
+      - seed
+      - epochs
+    metrics:
+      - scores.json:
+          cache: false
