--- a/dvc.yaml
+++ b/dvc.yaml
@@ -6,7 +6,7 @@ stages:
     outs:
       - dataset/cifar-10-batches-py
   convert-notebook:
-    cmd: JUPYTER_DATA_DIR=$PWD/__pypackages__/3.8/share/jupyter/ pdm run jupyter nbconvert --to script train.ipynb
+    cmd: pdm run convert-notebook
     deps:
       - train.ipynb
     outs:
@@ -21,7 +21,7 @@ stages:
       - seed
       - epochs
   train:
-    cmd: pdm run python train.py
+    cmd: pdm run train
     deps:
       - train.py
       - dataset/cifar-10-batches-py
