Moved data to remote repo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,5 +34,5 @@ build-backend = "pdm.pep517.api"
 [tool]
 [tool.pdm]
 [tool.pdm.scripts]
-convert-notebook = {shell = "JUPYTER_DATA_DIR=$PEP582_PACKAGES/share/jupyter/ jupyter nbconvert --to script train.ipynb"}
+convert-notebook = {shell = "JUPYTER_DATA_DIR=$(pdm info --package)/share/jupyter/ jupyter nbconvert --to script train.ipynb"}
 train = {shell = "python train.py"}
